CrOS Shelf: Don't show tooltips during a drag

(After chatting with kejiashao@ offline, we agreed that showing
tooltips during a drag operation is distracting and not useful.)

Bug: 879535
Change-Id: I2c092380560372ec568d25e55d984828b93d6839
Reviewed-on: https://chromium-review.googlesource.com/1199496
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588294}
Former-commit-id: cdb7b4b3090f3aa141100b2b03db1e53732f47d6